# FormalLanguagesTask5

./: CMakeLists.txt  README.md  main.cpp  regexp_handling.cpp  regexp_handling.h  run_tests.cpp  tests.cpp
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/formal_languages_task5/: index-sort-f.html  index-sort-l.html  index.html  regexp_handling.cpp.func-sort-c.html  regexp_handling.cpp.func.html  regexp_handling.cpp.gcov.html  run_tests.cpp.func-sort-c.html  run_tests.cpp.func.html  run_tests.cpp.gcov.html
coverage/formal_languages_task5/tests/: index-sort-f.html  index-sort-l.html  index.html  tests.cpp.func-sort-c.html  (+2 more)
coverage/v1/: __hash_table.func-sort-c.html  __hash_table.func.html  __hash_table.gcov.html  __locale.func-sort-c.html  __locale.func.html  __locale.gcov.html  __split_buffer.func-sort-c.html  __split_buffer.func.html  __split_buffer.gcov.html  __string.func-sort-c.html  __string.func.html  __string.gcov.html  algorithm.func-sort-c.html  algorithm.func.html  algorithm.gcov.html  bit.func-sort-c.html  bit.func.html  bit.gcov.html  deque.func-sort-c.html  deque.func.html  deque.gcov.html  functional.func-sort-c.html  functional.func.html  functional.gcov.html  index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  ios.func-sort-c.html  ios.func.html  ios.gcov.html  iosfwd.func-sort-c.html  iosfwd.func.html  iosfwd.gcov.html  istream.func-sort-c.html  istream.func.html  istream.gcov.html  iterator.func-sort-c.html  (+47 more)
tests/: tests.cpp
(+18 files in other folders)
